--- a/baserunner.css
+++ b/baserunner.css
@@ -41,3 +41,31 @@
     font-weight: bolder;
     font-family: courier;
 }
+
+#stateContainer, #workProgress {
+    float: left;
+}
+
+#stateContainer {
+    width: 200px;
+}
+
+#stateContainer div {
+    float: left;
+}
+
+#state {
+    margin-left: 10px;
+}
+
+#folderContainer div {
+    float: left;
+}
+
+#folders {
+    margin-left: 10px;
+}
+
+#states, #actions, #logContainer, #folderContainer {
+    clear: both;
+}
