tweak spacing; autostop when no work left and guestimate reckons it's all finished

--- a/baserunner.css
+++ b/baserunner.css
@@ -66,6 +66,11 @@
     margin-left: 10px;
 }
 
+#logContainer pre {
+    width: 960px;
+    overflow: hidden;
+}
+
 #states, #actions, #logContainer, #folderContainer {
     clear: both;
 }
